--- a/debian/control
+++ b/debian/control
@@ -1,38 +1,32 @@
 Source: git-squishy
 Section: unknown
 Priority: optional
-Maintainer: Ubuntu <ubuntu@unknown>
+Maintainer: Romanos Skiadas <rom.skiad@gmail.com>
 Build-Depends: debhelper (>=9),dh-python,python-all (>= 2.6.6-3~),python-setuptools,python3-all,python3-setuptools
 Standards-Version: 3.9.6
-Homepage: <insert the upstream URL, if relevant>
+Homepage: https://www.github.com/rski/git-squishy
 X-Python-Version: >= 2.6
 X-Python3-Version: >= 3.2
-#Vcs-Git: git://anonscm.debian.org/collab-maint/git-squishy.git
-#Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/git-squishy.git
+Vcs-Git: git://www.github.com/rski/git-squishy.
+
 
 Package: python-git-squishy
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}
 Suggests: python-git-squishy-doc
-Description: <insert up to 60 chars description> (Python 2)
- <insert long description, indented with spaces>
- .
- This package installs the library for Python 2.
+Description: Squash topic branches (Python 2)
+  This package installs the library for Python 2.
 
 Package: python3-git-squishy
 Architecture: all
 Depends: ${python3:Depends}, ${misc:Depends}
 Suggests: python-git-squishy-doc
-Description: <insert up to 60 chars description> (Python 3)
- <insert long description, indented with spaces>
- .
- This package installs the library for Python 3.
+Description: Squash topic branches (Python 3)
+  This package installs the library for Python 3.
 
 Package: python-git-squishy-doc
 Architecture: all
 Section: doc
 Depends: ${sphinxdoc:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description> (common documentation)
- <insert long description, indented with spaces>
- .
- This is the common documentation package.
+Description: Squash topic branches (common documentation)
+  This is the common documentation package.
